第二章古典风格

--- a/读书笔记/the sense of style阅读笔记/第二章古典风格.md
+++ b/读书笔记/the sense of style阅读笔记/第二章古典风格.md
@@ -18,7 +18,45 @@
 
 写作的意义在于呈现，写作是作者把思想加工后的成品呈现给读者，那些琐碎的工作需要作者背后完成。
 
->古典散文之道，是俭省地使用标记，就像在对话中一样，也尽量少用后设语。要引出一个话题而不使用后设语，其中一个方法就是用问句来开头；
+>古典散文之道，是俭省地使用标记，就像在对话中一样，也尽量少用后设语。要引出一个话题而不使用后设语，其中一个方法就是用问句来开头：本章讨论名字的流行程度起落与兴衰的因素——什么造成一个名字在流行程度上或起或落？另一种方法是视觉隐喻：以上一段表明，父母有时给女孩取一个男孩名字，但永远不会反过来这样做——我们看过，父母有时给女孩取个男孩名字，但永远不会反过来这样做。
+
+这段文字让我想到我的工作，公文写作一大反人类之处就是频繁使用后设语和标记语。例如：今后的工作有一下几点；本次会议要讨论的内容是。这样规范毫无差错的流于程式化的公文写作和机关工作，本身就否定创新。
+
+>近年来，越来愈多的心理学家和语言学家把他们的注意力转到儿童如何获致语言能力的问题。本文将回顾这种学习过程的最新研究。
+
+对不起，没有人会对你的研究感兴趣，所以写作时，请直接把你研究的内容捧到读者面前：
+
+>所有儿童不用规规矩矩上些什么课，就能获得说一种语言的能力。他们这种本领是怎样练成的呢？
+
+分隔
+
+>一个陈年旧货的意向是传达某个意念的最佳途径，一位古典作家也能让读者保持兴味，做法就是揭示成语的原始意义，围绕这个意向舞文弄墨，让读者张开心眼，目不转睛。
+
+面对避之不及的陈腔滥调，我们如何用写作技法呈现。
+
+>除了像“模型”和“层次”这些言辞坟墓，让作者把语言中原有的演员和动作埋葬其中，英语还给作者提供了一种危险的武器，称为“名词化”：把其他词类变成名词......原来说“确认”一个意念，现在变成“作出确认”；原来说“延后”某事，又变成了“做出延后”。
+
+作者用“言辞的坟墓”来形容抽象词汇和“名词化”，简直不能再妥帖，这样看来，一篇篇公文，就是一片片墓地，流露着骇人的气息。代表词汇：性、度、力——危险性、一致性、完整性、协同性、契合度、满意度、执行力等等。
+
+
+>轻度暴露于一氧化碳长期积累下来可能造成伤害。对一氧化碳的极度暴露可能在没有产生明显警示性状况下迅速丧命。婴儿、儿童、成年人和有健康问题的人更容易受一氧化碳影响，他们的状况也比较严重。
+
+正如平克所说，抽象词汇、僵尸名词以及滥用被动式，让读者觉得危险距离他们很远。且看将这段换种说法：
+
+>在室内使用发电机可能数分钟内**夺你的命**。发电机的废气含有一氧化碳。这是一种看不见、闻不到的毒气。切勿在房子或车库里面使用，即使门窗都打开了。只能在户外使用，并须远离门窗和通风口。
+
+你为什么会觉得这段文字更加触目惊心？抽象名词“警示性”“严重”换成具象直击人心的“夺你的命”；上段文字并没有指示代词，让你觉得它离你很远，这段文字用情感指数更高的“你”，这是认知写作学第三讲中的大脑喜欢情绪，多用情感指数高的词汇。
+
+>本章中我尝试将你的注意力导向造成糟糕文章的很多写作习惯：后设语、标记语言、回避笔法、吞吞吐吐、专业自恋、陈腔滥调、混用隐喻、后设概念，以及没有必要的被动式和僵尸名词。作者若要文章振衰起弊，或可尝试记住这一列“忌用”清单。但更佳的作法是谨记古典风格的指导性隐喻：作者在跟读者对话，把读者的视线引向世间的事物。......古典风格将写作这种不自然的行为，变得像我们最自然的两种行动：说话和观看万物。
+
+说的真好，除了罗列写作清单，最便捷的作法就是记住——写作是与读者对话，写作是将读者视线引向万物。
+
+
+
+
+
+
+
 
 
 
