--- a/《修辞感觉》读书笔记/第一章直喻.md
+++ b/《修辞感觉》读书笔记/第一章直喻.md
@@ -38,6 +38,6 @@
 
 - 警队里的巡特警就像是战场上的急先锋，替大部队趟遍十面埋伏，扫荡急难险重。（偶然想到，不属于“以不相似为基础仿写”）
 
-- 嘤嘤对晓晓的感情就像小猫对鱼骨头的态度，有鲜活可口的美味时就把它丢一边，闲来无极时翻它出来舔舔滋味。（这个写得太相似了，再写一个）
+- 嘤嘤对晓晓的感情就像小猫对鱼骨头的感情，有鲜活可口的美味时就把它丢一边，闲来无极时翻它出来舔舔滋味。（这个写得太相似了，再写一个）
 
 - 嘤嘤对历任男朋友的感觉就像嚼口香糖，刚嚼时清香四溢，时间久了就没味了。
