--- a/《修辞感觉》读书笔记/第六章列叙.md
+++ b/《修辞感觉》读书笔记/第六章列叙.md
@@ -9,3 +9,5 @@
 仿写：
 
 挂下电话，我不由觉得妈妈得声音还在我耳边徘徊，那声音渐渐微弱，渐渐细腻，从我耳边深入到耳朵深处，从耳朵深处侵入脑中，从脑中潜入心底，又从心底溜到那心之所系而又不可随之前往的遥远的故乡。
+
+**修辞是用语言对思想加以造型的方式，列叙法完美地呈现了这一点。**
