--- a/《风格感觉》读书笔记/第一章良好写作.md
+++ b/《风格感觉》读书笔记/第一章良好写作.md
@@ -56,6 +56,13 @@
 
 第一章平克主要为我们展示这样一种写作技法：写作用具象，避免抽象。写作用惊奇词汇，避免陈词滥调。
 
+## 总结
+
+本章写作原则：
+
+* 使用惊奇词汇抓住读者。
+* 用具象词汇代替抽象词汇，用具体画面拆解形容词。
+* 避免陈词滥调。
 
 
 
