--- a/《风格感觉》读书笔记/第二章古典风格.md
+++ b/《风格感觉》读书笔记/第二章古典风格.md
@@ -50,7 +50,16 @@
 >本章中我尝试将你的注意力导向造成糟糕文章的很多写作习惯：后设语、标记语言、回避笔法、吞吞吐吐、专业自恋、陈腔滥调、混用隐喻、后设概念，以及没有必要的被动式和僵尸名词。作者若要文章振衰起弊，或可尝试记住这一列“忌用”清单。但更佳的作法是谨记古典风格的指导性隐喻：作者在跟读者对话，把读者的视线引向世间的事物。......古典风格将写作这种不自然的行为，变得像我们最自然的两种行动：说话和观看万物。
 
 说的真好，除了罗列写作清单，最便捷的作法就是记住——写作是与读者对话，写作是将读者视线引向万物。
+## 总结
 
+本章写作原则：
+
+* 少用标记语，少用后设语。
+* 少用抽象词汇，用具象表现描绘抽象概念。
+* 围绕成语的原始意义舞文弄墨。
+* 避免使用名词化的动词和形容词。
+* 谨慎使用被动语态。
+* 避免专业自恋。
 
 
 
