--- a/《风格感觉》读书笔记/第五章一致性圆弧.md
+++ b/《风格感觉》读书笔记/第五章一致性圆弧.md
@@ -21,3 +21,13 @@
 以上文字换成肯定陈述来表达：
 
 带孩子是项艰难的工作，即使带过十几个孩子的月嫂，再带一个孩子也要费些周折。
+
+## 总结
+
+本章写作原则
+
+* 不要复杂主题。
+* 开篇明义，点名主题。
+* 谨慎使用否定陈述。
+
+最后一条“谨慎使用否定陈述”，否定陈述读起来确实费力，但如果作为“缓叙”这一修辞方法，可以呈现出不存在的相反事物，起到对词语造型的功能和作用，而不单单是否定陈述，此处应该区别开来。
