--- a/《修辞认识》读书笔记/第五章反义互饰和悖论.md
+++ b/《修辞认识》读书笔记/第五章反义互饰和悖论.md
@@ -65,7 +65,9 @@
 
 **心得：在运用了惊奇的修辞方法后面，加上一句疑问，可以令修辞更加惊奇。**
 
-仿写:（待补充）
+仿写:
+
+* 不同于碧瑶的剑气形如猎豹，惊羽的剑气宛若苍鹰，小凡锻造出的剑气，形状类似于流水般的无形之形，怎么会是这样的形状？见到过的人一定会感到惊讶，剑气就这样在空中流动，时而均匀清澈，时而浓烈闪耀，随体而行，随心而动。
 
 
 
@@ -88,7 +90,9 @@
 
 上段中的“我”，所选择的生活方式本身在正论中就是必然是悖论的存在。悖论的存在，变成语言就成了反义表现的形式了。
 
-仿写：（待补充）
+仿写：
+
+* 每当看到跟我一样的穷苦人开怀大笑，我就感到生气，因为我十分不解食不果腹的穷苦人怎么配得到欢乐？欢乐，那应该是上流社会的富人奢侈的财富吧。
 
 
 >强迫自己睡觉的决心和努力，当决心和努力因精疲力竭而不知去向的时候才得到报偿。他终于不知不觉进入了梦乡。——夏目簌石
@@ -104,4 +108,10 @@
 
 >语言表现的“悖论”，是一种通过积极地将相互矛盾的反义事项连接起来而强行将认识加以造型的尝试。
 
-仿写：（待补充）
+仿写：
+
+* 人人都会死亡，在我看来，这是多么幸运的事情啊。因为死亡意味着曾经活过，相比那些从未真正活过的灵魂，人们应该庆幸自己在令人目瞪口呆的几率的齿缝中被选中过。
+
+在我看来，反义互饰是为了制造惊奇的语感。作者提出和社会常规文化习俗相背离的悖论，引起惊奇。
+
+“人海中，偏遇上，自然平凡无奇”相遇相恋这种小概率的事件，用“平凡无奇”来形容，是典型的反义互饰。把文章引入哲学范畴。
