--- a/《修辞认识》读书笔记/第六章讽喻.md
+++ b/《修辞认识》读书笔记/第六章讽喻.md
@@ -37,7 +37,7 @@
 
 讽喻的趣味性，正是在于它甚至可以期待多义解释的可能性这一点上。
 
-来看下面一段，将小夜子隐喻成“女郎花”的讽喻。
+来看下面一段，将小夜子隐喻成“女郎花”的讽喻。“默默无闻地生活着的老年的孤堂老师和女儿小夜子，也不知已经变了心的未婚夫小野现在的情况如何，惴惴不安地从京都来到这里投奔他。这样，真葛原的‘女郎花’就被移植到了豪华的东京。”
 
 >真葛原上，女郎花开了。她利索地穿过芒草，似乎为自己的身高而抱歉，一直彬彬有礼地避开秋风，经过秋天的阵雨时节而进入冬天。忽而茶色、忽而黑色地时不时降下霜来，在冬季漫长的延续之中，她将微弱的生命维系于朝夕的每一天，希望渺茫，冬季不厌其烦地熬过了五年。寂寞的花从寒夜里钻出，混入了多彩而不知贫寒的春的世界。当春风来到天地间的时候，万物都燃烧着富贵的红色，她悄悄然开出的黄花顶在一根纤细的枝头，仿佛于不可居住的世间，在瑟缩地小心翼翼地呼吸一般。——夏目簌石
 
