--- a/严肃文学类读书笔记/《修辞认识》读书笔记/第六章讽喻.md
+++ b/严肃文学类读书笔记/《修辞认识》读书笔记/第六章讽喻.md
@@ -41,6 +41,10 @@
 
 >真葛原上，女郎花开了。她利索地穿过芒草，似乎为自己的身高而抱歉，一直彬彬有礼地避开秋风，经过秋天的阵雨时节而进入冬天。忽而茶色、忽而黑色地时不时降下霜来，在冬季漫长的延续之中，她将微弱的生命维系于朝夕的每一天，希望渺茫，冬季不厌其烦地熬过了五年。寂寞的花从寒夜里钻出，混入了多彩而不知贫寒的春的世界。当春风来到天地间的时候，万物都燃烧着富贵的红色，她悄悄然开出的黄花顶在一根纤细的枝头，仿佛于不可居住的世间，在瑟缩地小心翼翼地呼吸一般。——夏目簌石
 
+小夜子→女郎花→微弱的生命→寂寞的花→悄悄开出的黄花→瑟缩地小心翼翼地呼吸，这是基于“小夜子”隐喻成“女郎花”的一条主线，围绕在“女郎花”身边的环境，如“秋风”、“忽而茶色、忽而黑色降下霜来”、“春的世界”，这些对“女郎花”环境的隐喻则可以有各种理解方式。
+
+
+
 仿写：（待补充）
 
 >“一直得到您的爱护，这我是很清楚的。”波子老实地回答了他。感觉已将心的门扉打开了一半，正踌躇着。即使完全打开，恐怕竹原也不会进来。
